# dirChecker

./: .gitignore  LICENSE  README.md  dirChecker.py  pyproject.toml  requirements.txt  s3Checker.py
.github/workflows/: ci.yml
docs/: demo.cast
src/dirchecker/: __about__.py  __init__.py  __main__.py  checker.py  cli.py  detector.py  models.py  output.py  patterns.py  reporter.py  urls.py
tests/: test_cli.py  test_detector.py  test_output.py  test_urls.py
