[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dirchecker"
dynamic = ["version"]
description = "Recursive scanner for directory-listing vulnerabilities on web servers and cloud storage buckets."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "thezakman" }]
keywords = ["security", "pentest", "directory-listing", "recon", "bugbounty", "scanner"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "requests>=2.28.0",
    "colorama>=0.4.4",
    "rich>=12.0.0",
    "urllib3>=1.26.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "responses>=0.23", "ruff>=0.1"]

[project.urls]
Homepage = "https://github.com/thezakman/dirChecker"
Repository = "https://github.com/thezakman/dirChecker"
Issues = "https://github.com/thezakman/dirChecker/issues"

[project.scripts]
dirchecker = "dirchecker.cli:main"
dircheck = "dirchecker.cli:main"

[tool.hatch.version]
path = "src/dirchecker/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/dirchecker"]

[tool.ruff]
line-length = 110
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
